# serbianIdReader

./: Cargo.toml  LICENSE  README.md
idreader_lib/: Cargo.toml
idreader_lib/src/: lib.rs
idreader_lib/src/module_reader/: mod.rs
pdfexporter_lib/: Cargo.toml
pdfexporter_lib/src/: lib.rs
pdfexporter_lib/src/exporter/: mod.rs  pdf.rs
rsid_reader/: Cargo.toml
rsid_reader/src/: main.rs
src/: idreader.rs  main.rs  pdf.rs
src/idreader/: apollo_card_reader.rs  gemalto_card_reader.rs  reader.rs
